# releases-mcp

./: .env.example  .gitignore  Dockerfile  README.md  build-and-push.sh  docker-compose.yml  main.py  pyproject.toml  repo_mapping.json  server.py  test_integration.py  version.py
